add: footer design

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,15 +3,19 @@
 ---
 
 <header>
-    <img src="/public/assets/logo.svg" alt="">
     <nav>
+        <img src="/public/assets/logo.svg" alt="">
         <ul>
-            <li><a>amaelles.org</a></li>
+            <li><a>amaelles<span>.org</span></a></li>
             <li><a>Retrouvez nos offres d'emploi</a></li>
         </ul>
+        <div class="menu-mobile">
+                <div class="burger"/>
+        </div>
     </nav>
 </header>
 
 <style lang="scss">
+
 
 </style>
