add: footer design

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,10 +11,10 @@
             <li class="Tel"><a>03 84 28 08 80 | Amaelles</a></li>
         </ul>
         <ul class="RS">
-            <li><a><img src="/public/assets/Facebook.svg"></a></li>
-            <li><a><img src="/public/assets/Instagram.svg"></a></li>
-            <li><a><img src="/public/assets/X.svg"></a></li>
-            <li><a><img src="/public/assets/LinkedIn.svg"></a></li>
+            <li><a><img alt="Facebook-logo" src="/public/assets/Facebook.svg"></a></li>
+            <li><a><img alt="Instagram-logo" src="/public/assets/Instagram.svg"></a></li>
+            <li><a><img alt="X-logo" src="/public/assets/X.svg"></a></li>
+            <li><a><img alt="LinkedIn-logo" src="/public/assets/LinkedIn.svg"></a></li>
         </ul>
     </nav>
 </footer>
