add: txts changes

--- a/src/components/GrandJeu.astro
+++ b/src/components/GrandJeu.astro
@@ -6,7 +6,8 @@
     <h1>
         <span>Grand jeu </span>: forum des jobs d'été 2024
     </h1>
-    <p>Bienvenue sur ce grand jeu concours organisé par Amaelles, vous avez la possibilité en ayant un bon score d’obtenir le gain suivant : <strong>Cadeau</strong>.</p>
+    <p>Nous vous souhaitons la bienvenue à ce grand jeu ! Complétez le formulaire et entrez dans notre monde ! Le gagnant sera tiré au sort parmi les plus performants !
+        <br><strong>À gagner un pass 3 jours pour les Eurocks 2024 !</strong>.</p>
     <slot/>
 </div>
 
@@ -15,7 +16,7 @@
 
     .grand-jeu {
       background-color: #FCFCFC;
-      padding: 24px 12px;
+      padding: 28px 15px;
       margin: 12px 24px;
       box-shadow: $basic-shadow;
       border-radius: 24px;
@@ -33,9 +34,11 @@
       p {
         text-align: center;
         font-size: 16px;
-        padding: 24px 0;
+        padding: 20px 15px;
         strong {
+          display: block;
           text-transform: uppercase;
+          padding-top: 20px;
         }
       }
     }
