fix: multi platform won't work with bun so use yarn instead + some minor fixes

--- a/public/styles/fonts.scss
+++ b/public/styles/fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "Thinking Of Betty";
-  src: url("../../public/fonts/Thinking of Betty.woff2");
+  src: url("/fonts/Thinking of Betty.woff2");
 }
