--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,10 +11,10 @@
             <li class="Tel"><a>03 84 28 08 80 | Amaelles</a></li>
         </ul>
         <ul class="RS">
-            <li><a><img alt="Facebook-logo" src="/public/assets/Facebook.svg"></a></li>
-            <li><a><img alt="Instagram-logo" src="/public/assets/Instagram.svg"></a></li>
-            <li><a><img alt="X-logo" src="/public/assets/X.svg"></a></li>
-            <li><a><img alt="LinkedIn-logo" src="/public/assets/LinkedIn.svg"></a></li>
+            <li><a><img alt="Facebook-logo" src="/assets/Facebook.svg"></a></li>
+            <li><a><img alt="Instagram-logo" src="/assets/Instagram.svg"></a></li>
+            <li><a><img alt="X-logo" src="/assets/X.svg"></a></li>
+            <li><a><img alt="LinkedIn-logo" src="/assets/LinkedIn.svg"></a></li>
         </ul>
     </nav>
 </footer>
@@ -60,7 +60,7 @@
   }
 
   .Contact:before {
-    content: url("../../public/assets/Gmail Logo.svg");
+    content: url("../../assets/Gmail Logo.svg");
     position: absolute;
     width: 100%;
     height: auto;
@@ -74,7 +74,7 @@
   }
 
   .Tel:before {
-    content: url("../../public/assets/Phone.svg");
+    content: url("/assets/Phone.svg");
     position: absolute;
     width: 100%;
     height: auto;
