--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
 
 <header>
     <div class="menu-mobile">
-        <img src="/public/assets/logo.svg" alt="">
+        <img src="/assets/logo.svg" alt="">
         <div class="menu-burger"/>
     </div>
     <nav>
