--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 
-import "/public/styles/main.scss"
+
 import DefaultLayout from "../layouts/defaultLayout.astro";
 import GrandJeu from "../components/GrandJeu.astro";
 import Formulaire from "../components/Formulaire.vue"
@@ -16,5 +16,6 @@ import Formulaire from "../components/Formulaire.vue"
 
 
 <style lang="scss" is:global>
+    @import url("/styles/main.scss");
 
 </style>
