--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -1,4 +1,14 @@
 $main-color: #FFDB0D;
 
 
-$basic-shadow: 0 4px 8px rgba(0,0,0,0.2)
+$basic-shadow: 0 4px 8px rgba(0,0,0,0.2);
+
+//media queries
+
+$xs-screen: 575.98px;
+$sm-screen: 767.98px;
+$m-screen: 991.98px;
+$l-screen: 1199.98px;
+$xl-screen: 1439.98px;
+$xxl-screen: 1919.98px;
+
