--- a/src/components/GrandJeu.astro
+++ b/src/components/GrandJeu.astro
@@ -7,7 +7,7 @@
         <span>Grand jeu </span>: forum des jobs d'été 2024
     </h1>
     <p>Nous vous souhaitons la bienvenue à ce grand jeu ! Complétez le formulaire et entrez dans notre monde ! Le gagnant sera tiré au sort parmi les plus performants !
-        <br><strong>À gagner un pass 3 jours pour les Eurocks 2024 !</strong>.</p>
+        <br><strong>À gagner un pass 3 jours pour les Eurocks 2024 !</strong></p>
     <slot/>
 </div>
 
@@ -17,15 +17,22 @@
     .grand-jeu {
       background-color: #FCFCFC;
       padding: 28px 15px;
-      margin: 12px 24px;
+      margin: 48px 24px;
       box-shadow: $basic-shadow;
       border-radius: 24px;
+      @media screen and (min-width: $m-screen) {
+        padding: 28px 5%;
+        margin: 48px 16%;
+      }
       h1 {
         font-family: "Thinking Of Betty", serif;
         line-height: 1.5;
         text-align: center;
         font-size: 24px;
         padding: 0 12px;
+        @media screen and (min-width: $m-screen) {
+          font-size: 40px;
+        }
         span {
           font-family: "Thinking Of Betty", serif;
           background-color: $main-color;
@@ -35,6 +42,10 @@
         text-align: center;
         font-size: 16px;
         padding: 20px 15px;
+        @media screen and (min-width: $m-screen) {
+          text-align: left;
+          padding: 20px 0;
+        }
         strong {
           display: block;
           text-transform: uppercase;
